python/src/gateway/manifests/service.yaml
# Service can be seen as a group of pods
apiVersion: v1
kind: Service
metadata:
  name: gateway

spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
